--- a/stage-cnam/public/index.html
+++ b/stage-cnam/public/index.html
@@ -13,7 +13,7 @@
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>Riad Sraoui </title>
+    <title>Riad Draoui </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
